--- a/products/_posts/2019-09-12-large-outdoor-fountain.html
+++ b/products/_posts/2019-09-12-large-outdoor-fountain.html
@@ -1,15 +1,15 @@
 ---
 layout: products-article
-permalink: /products/laminar-fountain-and-jumping-fountian.html
+permalink: /products/large-outdoor-fountain.html
 category: products
 installation: installation
-image: laminar-fountain-and-jumping-fountian
-title: Laminar Fountain and Jumping Fountian
+image: large-outdoor-fountain
+title: Large Outdoor Fountain
 keywords: musical fountain
 description: 
 ---
-<h4 class="margin-top-30"></h4>
-<p></p>
+<h4 class="margin-top-30">Simple introduction of large outdoor fountain</h4>
+<p>large outdoor water fountain is the art of flow, magnificent water fountain feature gives infinite enjoyment, in modern urban landscape design, water is an integral part of the musical fountain is one of the very important attractions.</p>
 <div class="row margin-top-30">
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
     <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
@@ -54,32 +54,8 @@ description:
     <img src="/images/products/{{ page.image }}-14.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
   </div>
 </div>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></p>
-<p></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p></p> 
-<p></p>
-<p></p>
-<p></p>
+<h4 class="margin-top-30">Feature of digital water curtain</h4>
+<p class="margin-top-30"><b>1. Cheap price</b></p>
+<p>Our company is an integrated enterprise with the ability to design, produce and install.We have international advanced.So we have advantages in price.</p>
+<p class="margin-top-30"><b>2. Save water resources</b></p>
+<p>Modern water fountain application of modern circulatory system, can make water smart up, to avoid the formation of stagnant water, smelly water, which can effectively save water resources, strengthen the use of waste water.</p>
