--- a/products/_posts/2019-09-16-digital-water-curtain.html
+++ b/products/_posts/2019-09-16-digital-water-curtain.html
@@ -1,15 +1,15 @@
 ---
 layout: products-article
-permalink: /products/dry-deck-fountain.html
+permalink: /products/digital-water-curtain.html
 category: products
 installation: installation
-image: dry-deck-fountain
-title: Dry Deck Fountain
+image: digital-water-curtain
+title: Digital Water Curtain
 keywords: musical fountain
 description: 
 ---
-<h4 class="margin-top-30"></h4>
-<p></p>
+<h4 class="margin-top-30">Simple introduction of digital water curtain</h4>
+<p>Digital water curtain can make a kind of conspicuous striations or water curtain. The strips waterline drop down from the air, sparkling and cause a kind of genial atmosphere. The lighting effect is remarkable at night; it is the ideal choice for close distance. It can build the effects of water curtain such as heart-shaped roundness, semi-cycle, water curtain shape, triangle, or polygon etc.</p>
 <div class="row margin-top-30">
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
     <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
@@ -54,32 +54,8 @@ description:
     <img src="/images/products/{{ page.image }}-14.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
   </div>
 </div>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></p>
-<p></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p></p> 
-<p></p>
-<p></p>
-<p></p>
+<h4 class="margin-top-30">Feature of digital water curtain</h4>
+<p class="margin-top-30"><b>1. Cheap price</b></p>
+<p>Our company is an integrated enterprise with the ability to design, produce and install.We have international advanced.So we have advantages in price.</p>
+<p class="margin-top-30"><b>2. Labor saving/Easy operating and maintaining</b></p>
+<p>The digital water curtain is not only easy to install, also it is control by very simple process， good quality and long lasting.</p>
