--- a/products/_posts/2019-09-18-dry-deck-fountain.html
+++ b/products/_posts/2019-09-18-dry-deck-fountain.html
@@ -1,15 +1,15 @@
 ---
 layout: products-article
-permalink: /products/digital-water-curtain.html
+permalink: /products/dry-deck-fountain.html
 category: products
 installation: installation
-image: digital-water-curtain
-title: Digital Water Curtain
+image: dry-deck-fountain
+title: Dry Deck Fountain
 keywords: musical fountain
 description: 
 ---
-<h4 class="margin-top-30"></h4>
-<p></p>
+<h4 class="margin-top-30">Simple introduction of Dry deck fountain</h4>
+<p>Floor(Dry deck) Water Fountains are installed underground, with satin and beautiful stone surface, which could have thousands of design and sculpt on it. When music is playing, beads of water spray from the underground and flutter in the air. Under the light's irradiation, the ground shins like a mirror, which takes visitors' breath. When music stopped, everything returns to original peace.</p>
 <div class="row margin-top-30">
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
     <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
@@ -54,32 +54,8 @@ description:
     <img src="/images/products/{{ page.image }}-14.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
   </div>
 </div>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></p>
-<p></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p></p> 
-<p></p>
-<p></p>
-<p></p>
+<h4 class="margin-top-30">Feature of Dry deck fountain</h4>
+<p class="margin-top-30"><b>1. Cheap price</b></p>
+<p>Our company is an integrated enterprise with the ability to design, produce and install.We have international advanced.So we have advantages in price.</p>
+<p class="margin-top-30"><b>2. Safer</b></p>
+<p>The main advantage of fountain in dry land is the scientific use of the land area, not only do not occupy the land area, but also can perform the performance of fountain water features, which has a higher level of safety performance than ordinary fountain water features.</p>
