--- a/products/_posts/2019-09-10-laminar-fountain-and-jumping-fountian.html
+++ b/products/_posts/2019-09-10-laminar-fountain-and-jumping-fountian.html
@@ -1,15 +1,15 @@
 ---
 layout: products-article
-permalink: /products/large-outdoor-fountain.html
+permalink: /products/laminar-fountain-and-jumping-fountian.html
 category: products
 installation: installation
-image: large-outdoor-fountain
-title: Large Outdoor Fountain
+image: laminar-fountain-and-jumping-fountian
+title: Laminar Fountain and Jumping Fountian
 keywords: musical fountain
 description: 
 ---
-<h4 class="margin-top-30"></h4>
-<p></p>
+<h4 class="margin-top-30">Simple introduction of Laminar fountain and jumping fountian</h4>
+<p>The laminar jumping fountain, when the water is jetting out,the water column is arched,smooth and clean,water column would not splash, and it is sprayed along the set track. The curved wave water column passes through the pool,just like a elegant rainbow hangs in the air.</p>
 <div class="row margin-top-30">
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
     <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
@@ -54,32 +54,8 @@ description:
     <img src="/images/products/{{ page.image }}-14.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
   </div>
 </div>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></p>
-<p></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p></p> 
-<p></p>
-<p></p>
-<p></p>
+<h4 class="margin-top-30">Feature of Laminar fountain and jumping fountian</h4>
+<p class="margin-top-30"><b>1. cheap price</b></p>
+<p>Our company is an integrated enterprise with the ability to design, produce and install.We have international advanced.So we have advantages in price.</p>
+<p class="margin-top-30"><b>2. Steady and lively</b></p>
+<p>It is essentially a water rod, so steady that resembles to glass and yet so lively. This glass-like stream always follows its arc-shaped, parabolic trajectory without falling under it. Seeing this special water effect closely is an astonishing experience both day and night with its amazing million-color light spectrum.</p>
