--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ full_title: WATER SHOW-musical fountain
       <p>Our manufacture located in Guangzhou Baiyun Area(here only 30min from Guangzhou airport to factory), can avalible pick up servise if you want visit our factory.<a href="{{ site.url }}/about/">Learn More</a></p>
     </div>
   </div>
-  <div class="row">
+  <div class="row hidden-xs">
     <div class="section-heading-center section-heading-linethrough">
       <h2 class="heading">Last News</h2>
     </div>
