--- a/products/_posts/2019-09-08-fountain-accessories.html
+++ b/products/_posts/2019-09-08-fountain-accessories.html
@@ -7,3 +7,45 @@ title: Fountain Accessories
 keywords: musical fountain
 description: 
 ---
+<h4 class="margin-top-30">Simple introduction of fountain accessories</h4>
+<p>Fountains, like any other product, have products associated with them that help them to provide optimal function. These fountain accessories include various fountain parts, treatments for the water and enhancements that can add to the flair of the fountain.</p>
+<h4 class="margin-top-30">Categories of fountain accessories</h4>
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+  <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+  <h4></h4>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+</div>
+<hr>
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+  <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+  <h4></h4>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+</div>
+<hr>
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+  <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+  <h4></h4>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+</div>
+<hr>
