--- a/products/_posts/2019-09-08-fountain-accessories.html
+++ b/products/_posts/2019-09-08-fountain-accessories.html
@@ -10,42 +10,33 @@ description:
 <h4 class="margin-top-30">Simple introduction of fountain accessories</h4>
 <p>Fountains, like any other product, have products associated with them that help them to provide optimal function. These fountain accessories include various fountain parts, treatments for the water and enhancements that can add to the flair of the fountain.</p>
 <h4 class="margin-top-30">Categories of fountain accessories</h4>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-  <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+<div class="row">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="Plastic Submersible Fountain Pump">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4>1. Plastic Submersible Fountain Pump</h4>
+    <p>Plastic Pump</p>
+    <p>Voltage: 110V/220V/380V/50HZ/60HZ</p>
+    <p>Material: plastic</p>
+    <p>Application: music fountain</p>
+    <p>Certificate: CE, COC, SASO</p>
+    <p>Warranty: 1 year</p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-  <h4></h4>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
+<div class="row">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
-<hr>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-  <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
-</div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-  <h4></h4>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
-<hr>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-  <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
-</div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-  <h4></h4>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
-<hr>
