--- a/products/_posts/2019-09-08-fountain-accessories.html
+++ b/products/_posts/2019-09-08-fountain-accessories.html
@@ -12,7 +12,7 @@ description:
 <h4 class="margin-top-30">Categories of fountain accessories</h4>
 <div class="row margin-top-30">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="Plastic Submersible Fountain Pump">
+    <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block margin-bottom-30" alt="Plastic Submersible Fountain Pump">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
     <h4>1. Plastic Submersible Fountain Pump</h4>
@@ -27,7 +27,412 @@ description:
 </div>
 <div class="row margin-top-30">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="">
+    <img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-3.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-4.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-5.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-6.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-7.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-8.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-9.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-10.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-11.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-12.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-13.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-14.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-15.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-16.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-17.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-18.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-19.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-20.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-21.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-22.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-23.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-24.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-25.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-26.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-27.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-28.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4></h4>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-29.jpg" class="img-responsive center-block margin-bottom-30" alt="">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
     <h4></h4>
