--- a/products/_posts/2019-09-08-fountain-accessories.html
+++ b/products/_posts/2019-09-08-fountain-accessories.html
@@ -23,7 +23,7 @@ description:
     <p>Certificate: CE, COC, SASO</p>
     <p>Warranty: 1 year</p>
   </div>
-  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-top-30">
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
 <div class="row margin-top-30">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
