--- a/products/_posts/2019-09-08-fountain-accessories.html
+++ b/products/_posts/2019-09-08-fountain-accessories.html
@@ -27,31 +27,33 @@ description:
 </div>
 <div class="row margin-top-30">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+    <img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block margin-bottom-30" alt="Stainless steel fountain pump">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h4></h4>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <h4>2. Stainless steel fountain pump</h4>
+    <p>Item: stainless steel fountain pump</p>
+    <p>Voltage: 110V/220V/380V/50HZ/60HZ</p>
+    <p>Other material: cast iron,plastic</p>
+    <p>Power: 0.55-7.5kw</p>
+    <p>Packing: wood case</p>
+    <p>Used in fountain power supply</p>
   </div>
   <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
 <div class="row margin-top-30">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="/images/products/{{ page.image }}-3.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+    <img src="/images/products/{{ page.image }}-3.jpg" class="img-responsive center-block margin-bottom-30" alt="Europe style nozzle">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h4></h4>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <h4>3. Europe style nozzle</h4>
+    <p>Brand: WATER SHOW</p>
+    <p>Size: 1 inch</p>
+    <p>Pressure: 60 - 180kpa</p>
+    <p>Spary height: 2.7m</p>
+    <p>Discharge: 3.6 - 6 m3/h</p>
+    <p>Cover diameter: 0.3 - 0.8m</p>
+    <p>Material: stainless steel 304</p>
+    <p>Warranty: 1 year</p>
   </div>
   <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
@@ -60,13 +62,15 @@ description:
     <img src="/images/products/{{ page.image }}-4.jpg" class="img-responsive center-block margin-bottom-30" alt="">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h4></h4>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <h4>4. Full stainless steel europe style nozzle</h4>
+    <p>Brand: WATER SHOW</p>
+    <p>Size: 1 inch</p>
+    <p>Pressure: 60 - 180kpa</p>
+    <p>Spary height: 2.7m</p>
+    <p>Discharge: 3.6 - 6 m3/h</p>
+    <p>Cover diameter: 0.3 - 0.8m</p>
+    <p>Material: stainless steel 304</p>
+    <p>Warranty: 1 year</p>
   </div>
   <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
@@ -387,61 +391,69 @@ description:
 </div>
 <div class="row margin-top-30">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="/images/products/{{ page.image }}-26.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+    <img src="/images/products/{{ page.image }}-26.jpg" class="img-responsive center-block margin-bottom-30" alt="Adjustable directed high nozzle">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h4></h4>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-  </div>
-  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-</div>
-<div class="row margin-top-30">
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="/images/products/{{ page.image }}-27.jpg" class="img-responsive center-block margin-bottom-30" alt="">
-  </div>
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h4></h4>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <h4>26. Adjustable directed high nozzle</h4>
+    <p>Brand: WATER SHOW </p>
+    <p>Size: 1/2 - 4 inch</p>
+    <p>Pressure: 50 - 300kpa</p>
+    <p>Spary height 1 - 40m</p>
+    <p>Material: stainless steel 304</p>
   </div>
   <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
 <div class="row margin-top-30">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="/images/products/{{ page.image }}-28.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+    <img src="/images/products/{{ page.image }}-27.jpg" class="img-responsive center-block margin-bottom-30" alt="High Fountain">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h4></h4>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <h4>27. High Fountain</h4>
+    <p>Brand: WATER SHOW</p>
+    <p>Fountain Size: Customized size</p>
+    <p>Water spray height: 1-50m</p>
+    <p>Light: AC24V RGB light</p>
+    <p>Material: stainless 304</p>
+    <p>Voltage: 380V, 50/60Hz</p>
+    <p>Pump: submersible fountain pump</p>
+    <p>Certificate: CE, SGS, COC, SASO</p>
+    <p>Warranty: 1 year</p>
   </div>
   <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
 <div class="row margin-top-30">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="/images/products/{{ page.image }}-29.jpg" class="img-responsive center-block margin-bottom-30" alt="">
+    <img src="/images/products/{{ page.image }}-28.jpg" class="img-responsive center-block margin-bottom-30" alt="Floating fountain">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <h4></h4>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <h4>28. Floating fountain</h4>
+    <p>Floating fountain</p>
+    <p>Fountain Size: customized size</p>
+    <p>Water spray height: 0-30m (as required)</p>
+    <p>Voltage: 110-220V/50HZ-60HZ</p>
+    <p>Material: Stainless steel 304</p>
+    <p>Fountain pump: Iron or SS304</p>
+    <p>Fountain lamps: Plastic or SS304</p>
+    <p>Light color: RGB, color change automatically</p>
+  </div>
+  <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+</div>
+<div class="row margin-top-30">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <img src="/images/products/{{ page.image }}-29.jpg" class="img-responsive center-block margin-bottom-30" alt="Music fountain controller">
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <h4>29. Music fountain controller</h4>
+    <p>Item:music controller</p>
+    <p>Voltage:110V,220V,380V</p>
+    <p>Tyle:old,new,PLC,multimedia</p>
+    <p>Controll:pump,light,solenoid valve</p>
+    <p>Effect:fountain will follow the music</p>
+    <p>Music input:DVD,USB,program music</p>
+    <p>Music output:can connect to speaker</p>
+    <p>Fountain size:680mm to hundreds meter project</p>
+    <p>Feature:customize available</p>
+    <p>Packing:bubbling film,wood frame or plywood box</p>
   </div>
   <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 </div>
