--- a/products/_posts/2019-09-10-laminar-fountain.html
+++ b/products/_posts/2019-09-10-laminar-fountain.html
@@ -1,14 +1,14 @@
 ---
 layout: products-article
-permalink: /products/laminar-fountain-and-jumping-fountian.html
+permalink: /products/laminar-fountain.html
 category: products
 installation: installation
-image: laminar-fountain-and-jumping-fountian
-title: Laminar Fountain and Jumping Fountian
+image: laminar-fountain
+title: Laminar Fountain
 keywords: musical fountain
 description: 
 ---
-<h4 class="margin-top-30">Simple introduction of Laminar fountain and jumping fountian</h4>
+<h4 class="margin-top-30">Simple introduction of Laminar fountain</h4>
 <p>The laminar jumping fountain, when the water is jetting out,the water column is arched,smooth and clean,water column would not splash, and it is sprayed along the set track. The curved wave water column passes through the pool,just like a elegant rainbow hangs in the air.</p>
 <div class="row margin-top-30">
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
@@ -36,7 +36,7 @@ description:
     <img src="/images/products/{{ page.image }}-8.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
   </div>
 </div>
-<h4 class="margin-top-30">Feature of Laminar fountain and jumping fountian</h4>
+<h4 class="margin-top-30">Feature of Laminar fountain</h4>
 <p class="margin-top-30"><b>1. cheap price</b></p>
 <p>Our company is an integrated enterprise with the ability to design, produce and install.We have international advanced.So we have advantages in price.</p>
 <p class="margin-top-30"><b>2. Steady and lively</b></p>
