--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,3 +25,6 @@ description:
 <div class="col-md-6 text-center margin-bottom-30">
   <a href="https://goo.gl/maps/P1SzFSCzwuB2" target="_blank"><img src="/images/contact/map.jpg" class="img-responsive center-block img-thumbnail" alt="WATER SHOW Google Map"></a>
 </div>
+<div class="col-md-12 margin-bottom-30">
+  {% include feedback.html %}
+</div>
